<resources>
    <string name="AaZz">Aa - Za</string>
    <string name="AchievementMostProudOf">Achievement / Most Proud Of</string>
    <string name="ChangeFileLoadingOptionAccordingToYourNeed">Change File Loading Option According To Your Need</string>
    <string name="GetStarted">Get Started</string>
    <string name="MoreApps">More APPS(Ad)</string>
    <string name="ORWatchVideoAD">OR Watch Video AD</string>
    <string name="PremiumMember">Premium Member</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="PrivacyPolicyContinue">By clicking on GET STARTED Button below,you agree to the</string>
    <string name="PrivacyPolicyShortDes">Click on get start if you agree Privacy Policy</string>
    <string name="RateNow">Rate Now</string>
    <string name="RateUs">Rate Us</string>
    <string name="ShareApp">Share APP</string>
    <string name="ZzAa">Zz - Aa</string>
    <string name="about">About</string>
    <string name="aboutCodeFileAndFolderView">About Code File Folder View</string>
    <string name="aboutPersonalInfoSummaryHint">"About / Personal Profile / Summary "</string>
    <string name="achievements">Achievements</string>
    <string name="action_close">Close</string>
    <string name="action_redo">Redo</string>
    <string name="action_undo">Undo</string>
    <string name="adWillDisplayHere">Ad will be display here</string>
    <string name="add">ADD</string>
    <string name="address1">Address 1</string>
    <string name="address2_optional">Address 2 (optional)</string>
    <string name="admob_rewarded_video_id" />
    <string name="alert">Alert.!</string>
    <string name="all">ALL</string>
    <string name="allFieldAreRequired">All fields are required!</string>
    <string name="allFiles">All Files</string>
    <string name="allFilesConverter">All Files Converter</string>
    <string name="allFilesNotOpeningChangeFileLoadingSetting">All files not opening? Change files loading setting</string>
    <string name="allInOneCompelteOfficeApp">All in one complete office suite app</string>
    <string name="allInvoicesMakerWithNewLine">"All Invoices
Maker"</string>
    <string name="allPaidAndLockedFeatureMessage">All locked and paid features has been unlocked for next <b>12 hours</b>. Keep using our app. Thank You</string>
    <string name="allowPermission">Allow Permission</string>
    <string name="alreadyRattedNeverShowAgain">Already Rated Never Show Again</string>
    <string name="anErrorOccured">Error occurred please try again</string>
    <string name="androidElevenNewUpdateMessage">"On Android 11 and above version Google added a new data protection update, after this now we can't load all document files at once. So Android 11 and above version user can only use second option (selection mode) to load and view doc files "</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answerDoesNotMatched">Answer does not matched!</string>
    <string name="app_folder_name">/AllDocumentReader/data</string>
    <string name="app_name">Document Reader</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="areYouSureToClearChat">Are you sure to clear chat?</string>
    <string name="areYouSureToDeleteThisFile">Are you sure to delete this file?</string>
    <string name="areYouSureToRemove">Are you sure to remove?</string>
    <string name="back">Back</string>
    <string name="bannar_id_admob" />
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bracketRight">)</string>
    <string name="cancel">Cancel</string>
    <string name="changResumeHighlightTitleAccordingToYourRequirement">Change resume highlight title according to your requirements</string>
    <string name="changeAppLanguage">Change App Language</string>
    <string name="changeColor">Change Color</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chatApp">ChatApp</string>
    <string name="chatHahBeenCleared">Chat has been cleared</string>
    <string name="checkForUpdate">Check For Update</string>
    <string name="chip_text">Chip text</string>
    <string name="choosColor">Choose Color</string>
    <string name="chooseStorageLocation">Choose Storage Location</string>
    <string name="clear">clear</string>
    <string name="clearAll">Clear All</string>
    <string name="clearChat">Clear Chat !</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clickHereOrPlus">"'Click here or +'"</string>
    <string name="clickHereToSearchAnyDocument">Click here to Search to any documents</string>
    <string name="clickOnFileToRearrageRemoveOrView">click on files to rearrange, remove or view</string>
    <string name="code">Code</string>
    <string name="codeFile">Code Files</string>
    <string name="codeFileFolderView">Code Files Folder View</string>
    <string name="codeFileFolderViewMessage">"With this 'Code File Folder View' option you can only see programing code files like JAVA, CPP, HTML, XML etc. To view document files please use 'Doc Files Folder View' option"</string>
    <string name="codeFileFolderViewWithNewLine">Code Files Folder View</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="companyName">Company Name</string>
    <string name="contact">"Contact  "</string>
    <string name="contactUs">Contact Us</string>
    <string name="convert">Convert</string>
    <string name="convertToPdf">Convert to PDF</string>
    <string name="copyText">Copy Text</string>
    <string name="copyTextToClipBoard">Text copied to clipboard</string>
    <string name="country_prompt">Choose question</string>
    <string name="createNewPdfFile">"Create New
PDF File"</string>
    <string name="createdFile">Created Files</string>
    <string name="creatingNewFile">Creating File..</string>
    <string name="cretingPdfPleaseWait">Creating PDF Please Wait</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="csv">CSV</string>
    <string name="csvToPDF">"CSV
to PDF"</string>
    <string name="currentlyOCRsupportedOnlyEnglishLanguageMessage">Currently OCR (Optical Character Recognition) recognize english language charter &amp; digit only. Other language will be added soon</string>
    <string name="dayMode">Day Mode</string>
    <string name="degree">Degree</string>
    <string name="delete">Delete</string>
    <string name="deletedSuccessfully">Deleted Successfully</string>
    <string name="description">Description</string>
    <string name="details"><b>Details</b></string>
    <string name="dialog_ascending">Ascending</string>
    <string name="dialog_create_folder_error">Failed to create folder</string>
    <string name="dialog_descending">Descending</string>
    <string name="dialog_file_name">File Name</string>
    <string name="dialog_file_rename_error">Failed to rename file</string>
    <string name="dialog_folder_name">Folder Name</string>
    <string name="dialog_name_error">%s already exists.</string>
    <string name="dialog_title_text_back_color">Select a Text Background Color</string>
    <string name="dialog_title_text_color">Select a Text Color</string>
    <string name="dismiss">Dismiss</string>
    <string name="doYouWantToSave">Do you want to save changes?</string>
    <string name="doYouWantToSaveMessage">With the help of source file you will be able to edit it later whenever you want.</string>
    <string name="dob_optional">DOB (Optional)</string>
    <string name="doc">DOC</string>
    <string name="docFile">Doc Files</string>
    <string name="docScannerImageToTxtOCR">"Doc Scanner
Img to Txt (OCR)"</string>
    <string name="documentReader">Document Reader</string>
    <string name="documentReader_two">Document Reader</string>
    <string name="documentScanner">"Document
Scanner"</string>
    <string name="docurmentFile">Document Files</string>
    <string name="dontSave">"Don't Save"</string>
    <string name="download">Download</string>
    <string name="downloadSuccessfully">Downloaded Successfully..</string>
    <string name="downloadingImagePleaseWait">Downloading Image Please Wait</string>
    <string name="eBook">eBook</string>
    <string name="eBookFiles">eBook Files</string>
    <string name="ebookReaderIsPaidFeature">Ebook reader is paid feature</string>
    <string name="enterLink">Enter link</string>
    <string name="enterTextAndUrl">Enter Text &amp; Url</string>
    <string name="enterTextToDisplay">Enter text to display</string>
    <string name="filePath">File Path</string>
    <string name="fileSelectionModMessage">"With this option you don't have to wait for a while. You just manually pick your desire file from storage directory. Drawback of this option is you may not open all files because in first option we just load only those files which this app is supported to open.

Supported files format are doc, docx, xls, xlsx, ppt, pptx, txt, pdf, dot, dotx, dotm, rtf, xlt, xlsm, xltm, pot, pptm, potx, potm, csv, epub and all programing file format like html, json, c++, etc...."</string>
    <string name="gotIt">Got IT</string>
    <string name="howToSavePdfFile">How to save CV as PDF File</string>
    <string name="howToSavePdfFileMessage">"In order to save PDF file click on Save PDF Button in coming next screen. If save PDF button is not showing just click on 'Select Printer' &amp; 'choose Save as PDF' option from the top right corner"</string>
    <string name="loadAllFilesAtOnce">Load all files at once</string>
    <string name="loadAllFilesTypeAtOnceMessage">With this option Document Reader App automatically load all supported document files from your phone storage. (This option may take long time to load files because all files are loaded from all folders)</string>
    <string name="loadFileFromExternalStorage">Load files from external storage</string>
    <string name="loadFileFromInternalStorage">Load files from internal storage</string>
    <string name="loadSpecificFileTitle">Load specific files one by one (Selection Mode)</string>
    <string name="neverShowAgain">Never show again</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="pdfContentWithOptions">PDF Content With Options</string>
    <string name="pdfFileCreatedSuccessfully">PDF File Created Successfully</string>
    <string name="phoneStorage">Phone Storage</string>
    <string name="preview">Preview</string>
    <string name="print">Print</string>
    <string name="save">Save</string>
    <string name="scrollToBottom">Scroll To Bottom</string>
    <string name="scrollToTop">Scroll To Top</string>
    <string name="sdCard">SD Card</string>
    <string name="search">Search</string>
    <string name="sortByDate">By Date</string>
    <string name="sortBySize">By Size</string>
    <string name="viewFile">View File</string>
    <string name="viewPdfContentOnly">View PDF Content Only</string>
    <string name="viewPdfFile">View PDF Files</string>
</resources>