<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_scroll_to_top"
        android:title="@string/scrollToTop"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scroll_to_bottom"
        android:title="@string/scrollToBottom"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_print"
        android:title="@string/print"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_convert_to_pdf"
        android:title="@string/convertToPdf"
        android:visible="false"
        app:showAsAction="never" />
</menu>