<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="Sort"
        android:titleCondensed="Areas"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_by_ascending"
                android:title="@string/AaZz" />
            <item
                android:id="@+id/sort_by_descending"
                android:title="@string/ZzAa" />
            <item
                android:id="@+id/sort_by_date"
                android:title="@string/sortByDate" />
            <item
                android:id="@+id/sort_by_size"
                android:title="@string/sortBySize" />
        </menu>
    </item>
</menu>