<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:orderInCategory="100"
        android:title="@string/action_undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:orderInCategory="200"
        android:title="@string/action_redo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_preview"
        android:orderInCategory="200"
        android:title="@string/preview"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="200"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="never" />
</menu>