<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_bold"
        android:padding="@dimen/_12sdp"
        android:text="@string/pdfFileCreatedSuccessfully"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_regular"
        android:maxLines="2"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/filePath"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ViewFile"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/shape_app_color"
            android:fontFamily="@font/font_bold"
            android:text="@string/viewFile"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noThanks"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/shape_edit_field"
            android:fontFamily="@font/font_medium"
            android:gravity="center"
            android:text="@string/no_thanks"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />
    </LinearLayout>
</LinearLayout>