<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_bold"
        android:padding="@dimen/_12sdp"
        android:text="@string/chooseStorageLocation"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout
        android:id="@+id/chooseFromPhoneLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/icon_storage" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_medium"
                android:text="@string/phoneStorage"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/loadFileFromInternalStorage"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chooseFromSDCardLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/icon_sd_card" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_medium"
                android:text="@string/sdCard"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_light"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/loadFileFromExternalStorage"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center|end"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/shape_edit_field"
        android:fontFamily="@font/font_medium"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />
</LinearLayout>