<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                android:id="@+id/upGradeToPremiumTv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/ChangeFileLoadingOptionAccordingToYourNeed"
                android:textColor="#ff00357b"
                android:textSize="@dimen/_14sdp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <RadioButton
                    android:id="@+id/loadAllFileAtOnce"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/font_medium"
                    android:text="@string/loadAllFilesAtOnce"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="start|center"
                    android:text="@string/loadAllFilesTypeAtOnceMessage"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_9sdp" />

                <RadioButton
                    android:id="@+id/loadAllFileOneByOne"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/font_medium"
                    android:text="@string/loadSpecificFileTitle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="start|center"
                    android:text="@string/fileSelectionModMessage"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_9sdp" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>