<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_bold"
        android:padding="@dimen/_12sdp"
        android:text="@string/enterTextAndUrl"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/enterTextToDisplay"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/displayTextET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@drawable/shape_edit_field"
            android:elevation="1dp"
            android:fontFamily="@font/font_regular"
            android:hint="Enter text"
            android:inputType="text"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/enterLink"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/enterLinkEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@drawable/shape_edit_field"
            android:elevation="1dp"
            android:fontFamily="@font/font_regular"
            android:hint="Enter url"
            android:inputType="text"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/insertBtn"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/shape_app_color"
            android:fontFamily="@font/font_bold"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/shape_edit_field"
            android:fontFamily="@font/font_medium"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</LinearLayout>